# smt

./: .gitignore
smt-player/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  smt_avcodec.c  smt_player.c
smt-player/SMTPlayer/: build.gradle  gradle.properties
smt-player/SMTPlayer/player/: build.gradle
smt-player/SMTPlayer/player/jni/: org_sjtu_nerdtv_smt_player_jni_SmtNativeApi.h
smt-player/SMTPlayer/player/src/main/: AndroidManifest.xml
smt-player/SMTPlayer/player/src/main/java/jni/: Android.mk
smt-player/SMTPlayer/player/src/main/jni/: Application.mk  org_sjtu_nerdtv_smt_player_jni_SmtNativeApi.h  smt_player.c
smt-player/SMTPlayer/player/src/main/res/layout/: activity_smt_main.xml
smt-player/android/: .project  AndroidManifest.xml
smt-player/android/jni/: smt_player.c  smt_render.h
smt-player/android/res/layout/: activity_fullscreen.xml  activity_main.xml
smt-player/android/res/menu/: main.xml
smt-player/android/res/values/: strings.xml
smt-player/android/src/org/sjtu/nerdtv/smt/: smtNative.java  (+3 more)
smt-player/ffmpeg/: Signaling.xml  android_build.sh  ci.xml  client.c  cmdutils.c  cmdutils.h  cmdutils_common_opts.h  config.asm  config.fate  config.h  config.mak  configure  ffmpeg.c  ffmpeg_filter.c  ffmpeg_opt.c  ffplay.c  ffplay_thread.c  ffplay_threads.c  index.html  linux_build.sh  smt_sent_pkt.dump
smt-player/ffmpeg/doc/: config.texi
smt-player/ffmpeg/libavcodec/: avcodec.h  h264.h  pthread_frame.c  utils.c
smt-player/ffmpeg/libavdevice/: alldevices.c
smt-player/ffmpeg/libavformat/: Makefile  allformats.c  avformat.h  avio.c  avio.h  aviobuf.c  isom.h  mov.c  movenc.c  movenc.h  movenchint.c  rtpenc_aac.c  smt.c  smt_getfile.c  smt_getfile.h  smt_proto.c  smt_proto.h  smt_signal.c  smt_signal.h  udp.c  url.h  utils.c
smt-player/ffmpeg/libavutil/: Makefile  ffversion.h  log.c  log.h  mxml-attr.c  mxml-node.c  mxml-private.c  mxml-set.c  mxml-string.c  mxml.h
smt-player/include/: smt_common.h
smt-player/jni/: Android.mk  smt_player.c  smt_render.c  smt_render.h
smt-player/player/: gradle.properties  local.properties
smt-player/player/app/: build.gradle
smt-player/player/app/src/main/: AndroidManifest.xml
smt-player/test/: udpserver.c
(+12 files in other folders)
